config/includes.chroot/etc/ip6tables.save
# Completed on Tue May 17 06:40:44 2016
# Generated by iptables-save v1.4.21 on Tue May 17 06:40:44 2016
*filter
:INPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m limit --limit 5/hour -j LOG --log-prefix "ip6tables denied: " --log-level 7
-A INPUT -j DROP
:FORWARD ACCEPT [0:0]
-A FORWARD -i lo -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m limit --limit 5/hour -j LOG --log-prefix "ip6tables forward denied: " --log-level 7
-A FORWARD -j DROP
:OUTPUT ACCEPT [328:67592]
COMMIT
